--- a/app/src/main/res/layout/view_password_custom.xml
+++ b/app/src/main/res/layout/view_password_custom.xml
@@ -6,9 +6,9 @@
         android:id="@+id/password_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:endIconMode="custom"
+        app:endIconContentDescription="@string/toggle_password_visibility"
         app:endIconDrawable="@drawable/carbon_view_off_filled"
-        app:endIconContentDescription="@string/toggle_password_visibility">
+        app:endIconMode="custom">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_input"
