--- a/app/src/main/res/layout/fragment_b_post_detail.xml
+++ b/app/src/main/res/layout/fragment_b_post_detail.xml
@@ -28,32 +28,33 @@
                     android:id="@+id/ivBack"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:src="@drawable/ic_back"
-                    android:contentDescription="@string/back"
-                    android:layout_marginStart="16dp"
                     android:layout_gravity="start"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:contentDescription="@string/back"
+                    android:src="@drawable/ic_back" />
 
                 <ImageView
                     android:id="@+id/ivMoreOptions"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:src="@drawable/ic_more_options"
-                    android:contentDescription="@string/more_options"
-                    android:layout_marginEnd="16dp"
                     android:layout_gravity="end"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:contentDescription="@string/more_options"
+                    android:src="@drawable/ic_more_options" />
 
             </androidx.appcompat.widget.Toolbar>
+
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="8dp"
                 android:text="@string/new_thread"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp" />
+                android:textStyle="bold" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -71,25 +72,25 @@
                 android:id="@+id/profile"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:contentDescription="@string/image_profile"
                 android:layout_marginEnd="8dp"
-                app:civ_border_width="2dp"
+                android:contentDescription="@string/image_profile"
                 app:civ_border_color="@color/white"
-                tools:src="@tools:sample/avatars"
+                app:civ_border_width="2dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                tools:src="@tools:sample/avatars" />
 
             <TextView
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/name"
                 android:layout_marginStart="8dp"
+                android:text="@string/name"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/profile"
                 app:layout_constraintStart_toEndOf="@id/profile"
-                app:layout_constraintBottom_toBottomOf="@id/profile" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/date"
@@ -108,26 +109,26 @@
                 android:id="@+id/postContent"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/cosplay_akatsuki_naruto_geek"
                 android:textSize="14sp"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="16dp"
-                app:layout_constraintTop_toBottomOf="@id/profile"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/profile"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/profile" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="4dp"
                 app:layout_constraintDimensionRatio="3:4"
-                app:layout_constraintTop_toBottomOf="@id/postContent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/postContent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/postContent">
 
                 <ImageView
                     android:id="@+id/ImageB"
@@ -143,39 +144,39 @@
                 android:id="@+id/location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
                 android:layout_marginTop="8dp"
+                android:textSize="14sp"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/cardView"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/cardView" />
 
             <LinearLayout
                 android:id="@+id/iconLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="16dp"
-                app:layout_constraintTop_toBottomOf="@id/location"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/cardView"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/location">
 
                 <ImageView
                     android:id="@+id/icLike"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:layout_marginEnd="16dp"
                     android:contentDescription="@string/icon_like"
-                    android:src="@drawable/ic_like"
-                    android:layout_marginEnd="16dp" />
+                    android:src="@drawable/ic_like" />
 
                 <ImageView
                     android:id="@+id/icComment"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:layout_marginEnd="16dp"
                     android:contentDescription="@string/icon_comment"
-                    android:src="@drawable/ic_comment"
-                    android:layout_marginEnd="16dp" />
+                    android:src="@drawable/ic_comment" />
 
                 <ImageView
                     android:id="@+id/icShare"
@@ -189,9 +190,9 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/iconLayout"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/iconLayout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
