--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,15 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.BApps" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/my_light_primary</item>
+        <item name="colorPrimary">@color/my_light_primary</item>
     </style>
 
     <style name="Theme.BApps" parent="Base.Theme.BApps" />
+
+    <style name="Theme.BApps.AppBarOverlay" parent="ThemeOverlay.Material3.ActionBar">
+        <!-- Customize AppBarLayout here -->
+        <item name="colorPrimary">@color/my_light_primary</item>
+        <item name="colorPrimaryVariant">@color/my_light_primary_variant</item>
+    </style>
 </resources>
