--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,6 +6,23 @@
     app:startDestination="@id/splashFragment">
 
     <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.raihanardila.bapps.SplashFragment"
+        android:label="Splash"
+        tools:layout="@layout/fragment_splash">
+        <action
+            android:id="@+id/action_splashFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_splashFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
         android:id="@+id/loginFragment"
         android:name="com.raihanardila.bapps.ui.auth.LoginFragment"
         android:label="Login"
@@ -48,9 +65,6 @@
         <action
             android:id="@+id/action_homeFragment_to_mapsFragment"
             app:destination="@id/mapsFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_mapsActivity"
-            app:destination="@id/mapsActivity" />
     </fragment>
 
     <fragment
@@ -69,19 +83,21 @@
         android:id="@+id/profileFragment"
         android:name="com.raihanardila.bapps.ui.profile.ProfileFragment"
         android:label="Profile"
-        tools:layout="@layout/fragment_profile" />
-    <action
-        android:id="@+id/action_profileFragment_to_settingsFragment"
-        app:destination="@id/settingsFragment" />
+        tools:layout="@layout/fragment_profile">
+        <action
+            android:id="@+id/action_profileFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.raihanardila.bapps.ui.settings.SettingsFragment"
-        android:label="Profile"
-        tools:layout="@layout/fragment_settings" />
-    <action
-        android:id="@+id/action_settingsFragment_to_loginFragment"
-        app:destination="@id/loginFragment" />
+        android:label="Settings"
+        tools:layout="@layout/fragment_settings">
+        <action
+            android:id="@+id/action_settingsFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/bpostFragment"
@@ -99,44 +115,30 @@
         android:label="BPost"
         tools:layout="@layout/fragment_b_post_detail">
         <action
-            android:id="@+id/action_bpostFragment_to_homeFragment"
+            android:id="@+id/action_bpostDetailFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/splashFragment"
-        android:name="com.raihanardila.bapps.SplashFragment"
-        android:label="BPost"
-        tools:layout="@layout/fragment_splash">
-        <action
-            android:id="@+id/action_splashFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
-            app:popUpTo="@id/splashFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
-    <dialog
-        android:id="@+id/downloadBottomSheetFragment"
-        android:name="com.raihanardila.bapps.ui.customeview.download.DownloadBottomSheetFragment"
-        android:label="DownloadBottomSheetFragment"
-        tools:layout="@layout/fragment_download_bottom_sheet"/>
-    <fragment
-        android:id="@+id/mapsFragment"
-        android:name="com.raihanardila.bapps.ui.maps.MapsFragment"
-        android:label="MapsFragment"
-        tools:layout="@layout/fragment_maps"/>
-    <fragment
         android:id="@+id/imageDetailFragment"
         android:name="com.raihanardila.bapps.ui.images.ImageDetailFragment"
-        android:label="ImageDetailFragment"
+        android:label="ImageDetail"
         tools:layout="@layout/fragment_image_detail">
         <action
             android:id="@+id/action_imageDetailFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
-    <activity
-        android:id="@+id/mapsActivity"
-        android:name="com.raihanardila.bapps.ui.maps.MapsActivity"
-        android:label="activity_maps"
-        tools:layout="@layout/activity_maps" />
 
+    <fragment
+        android:id="@+id/mapsFragment"
+        android:name="com.raihanardila.bapps.ui.maps.MapsFragment"
+        android:label="Maps"
+        tools:layout="@layout/fragment_maps" />
+
+
+    <dialog
+        android:id="@+id/downloadBottomSheetFragment"
+        android:name="com.raihanardila.bapps.ui.customeview.download.DownloadBottomSheetFragment"
+        android:label="DownloadBottomSheet"
+        tools:layout="@layout/fragment_download_bottom_sheet"/>
 </navigation>
