--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -103,6 +103,8 @@
         android:contentDescription="@string/back_button"
         android:elevation="4dp"
         android:scaleType="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/ic_arrow_back" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
